--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -5,7 +5,7 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference android:title="@string/backup">
+    <Preference android:title="@string/backups">
         <intent
             android:targetClass="com.flowcrypt.email.ui.activity.settings.BackupSettingsActivity"
             android:targetPackage="@string/application_id" />
