Added a function of receiving info about an array of public keys from Attester API. Renamed Servers screen in settings to Attester| #131.

--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -27,7 +27,11 @@
             android:targetPackage="@string/application_id" />
     </Preference>
 
-    <Preference android:title="@string/servers" />
+    <Preference android:title="@string/attester">
+        <intent
+            android:targetClass="com.flowcrypt.email.ui.activity.settings.AttesterSettingsActivity"
+            android:targetPackage="@string/application_id" />
+    </Preference>
 
     <Preference android:title="@string/legal">
         <intent
