--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="gray">#989898</color>
     <color name="dark">#535353</color>
     <color name="transparent_white">#A0FFFFFF</color>
+    <color name="orange">#D18826</color>
 </resources>
