--- a/FlowCrypt/src/main/res/xml/dev_preferences.xml
+++ b/FlowCrypt/src/main/res/xml/dev_preferences.xml
@@ -16,7 +16,7 @@
             android:key="@string/preferences_key_is_detect_memory_leak_enable"
             android:title="@string/preferences_title_enable_detect_memory_leak" />
         <CheckBoxPreference
-            android:checked="true"
+            android:defaultValue="true"
             android:key="@string/preferences_key_is_acra_enable"
             android:title="@string/preferences_title_enable_acra" />
         <Preference android:title="@string/crash_the_app">
