Added a progress bar when loading messages.| #160

--- a/FlowCrypt/src/main/res/layout/fragment_email_list.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_email_list.xml
@@ -5,9 +5,47 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <TextView
+            android:id="@+id/textViewActionProgress"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/default_margin_content_small"
+            android:layout_marginStart="@dimen/default_margin_content_small"
+            android:textSize="@dimen/default_text_size_very_small"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/progressBarActionProgress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="5% Connecting to mail server" />
+
+        <ProgressBar
+            android:id="@+id/progressBarActionProgress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:maxHeight="@dimen/default_twice_dip"
+            android:minHeight="@dimen/default_twice_dip"
+            android:progressDrawable="@drawable/download_progress_style"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:progress="45" />
+
+    </android.support.constraint.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/emptyView"
