--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="default_margin_content_small">8dp</dimen>
     <dimen name="default_margin_content_medium">12dp</dimen>
     <dimen name="default_single_dip">1dp</dimen>
+    <dimen name="default_twice_dip">2dp</dimen>
 
     <dimen name="default_button_height">64dp</dimen>
     <dimen name="default_button_width">320dp</dimen>
