--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -40,4 +40,14 @@
     <item name="viewIdTextViewStatusInfo" type="id" />
     <item name="viewIdAddNewAccount" type="id" />
 
+
+    <item name="progress_id_start_of_loading_new_messages" type="id" />
+    <item name="progress_id_adding_task_to_queue" type="id" />
+    <item name="progress_id_running_task" type="id" />
+    <item name="progress_id_resetting_connection" type="id" />
+    <item name="progress_id_connecting_to_email_server" type="id" />
+    <item name="progress_id_running_smtp_action" type="id" />
+    <item name="progress_id_running_imap_action" type="id" />
+    <item name="progress_id_opening_store" type="id" />
+    <item name="progress_id_getting_list_of_emails" type="id" />
 </resources>
