--- a/FlowCrypt/src/main/res/layout/activity_import_private_key.xml
+++ b/FlowCrypt/src/main/res/layout/activity_import_private_key.xml
@@ -6,90 +6,145 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layoutContent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/layoutContentView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/textViewImportKeyTitle"
-            android:text="@string/import_private_key"
-            style="@style/ScreenHeading"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <Button
-            android:id="@+id/buttonLoadFromFile"
-            style="@style/AppWidget.Button"
-            android:layout_width="0dp"
-            android:layout_marginTop="@dimen/margin_top_first_button"
-            android:text="@string/load_from_a_file"
-            android:theme="@style/AppWidget.Button.Green"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-            app:layout_constraintTop_toBottomOf="@+id/textViewImportKeyTitle" />
-
-        <Button
-            android:id="@+id/buttonLoadFromClipboard"
-            style="@style/AppWidget.Button"
-            android:layout_width="0dp"
-            android:layout_marginTop="@dimen/margin_between_buttons"
-            android:text="@string/load_from_clipboard"
-            android:theme="@style/AppWidget.Button.Green"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
-            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-            app:layout_constraintTop_toBottomOf="@+id/buttonLoadFromFile" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guidelineRight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/layoutProgress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+    <LinearLayout
+        android:id="@+id/progressBarLoadingBackups"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
         <ProgressBar
-            android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_gravity="center" />
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="@dimen/default_margin_very_big"
-            android:text="@string/checking_the_private_key"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/default_margin_big"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/loading_backups"
+            android:textColor="@color/dark"
+            android:textSize="@dimen/default_text_size_big" />
+    </LinearLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/layoutContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layoutContentView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textViewImportKeyTitle"
+                style="@style/ScreenHeading"
+                android:layout_width="0dp"
+                android:text="@string/import_private_key"
+                app:layout_constraintHeight_default="wrap"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/buttonImportBackup"
+                style="@style/AppWidget.Button"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/margin_top_first_button"
+                android:text="@string/import_backup"
+                android:theme="@style/AppWidget.Button.Green"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+                app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+                app:layout_constraintTop_toBottomOf="@+id/textViewImportKeyTitle" />
+
+            <Button
+                android:id="@+id/buttonLoadFromFile"
+                style="@style/AppWidget.Button"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/margin_between_buttons"
+                android:text="@string/load_from_a_file"
+                android:theme="@style/AppWidget.Button.Green"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+                app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+                app:layout_constraintTop_toBottomOf="@+id/buttonImportBackup" />
+
+            <Button
+                android:id="@+id/buttonLoadFromClipboard"
+                style="@style/AppWidget.Button"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/margin_between_buttons"
+                android:text="@string/load_from_clipboard"
+                android:theme="@style/AppWidget.Button.Green"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
+                app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
+                app:layout_constraintTop_toBottomOf="@+id/buttonLoadFromFile" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guidelineLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guidelineRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layoutProgress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginTop="@dimen/default_margin_very_big"
+                android:text="@string/checking_the_private_key"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+        </android.support.constraint.ConstraintLayout>
+    </FrameLayout>
+
+    <include
+        android:id="@+id/layoutSyncStatus"
+        layout="@layout/sync_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
 </FrameLayout>
