Added showing the mailbox labels when open the side menu as a default option. | Close #174.

--- a/FlowCrypt/src/main/res/layout/nav_menu_account_item.xml
+++ b/FlowCrypt/src/main/res/layout/nav_menu_account_item.xml
@@ -11,6 +11,7 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <ImageView
@@ -26,11 +27,13 @@
 
     <LinearLayout
         android:id="@+id/layoutUserInfo"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/default_margin_content_small"
         android:layout_marginStart="@dimen/default_margin_content_small"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/imageViewUserPhoto"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5">
@@ -46,6 +49,8 @@
             android:id="@+id/textViewUserEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             tools:text="android.studio@android.com" />
     </LinearLayout>
 
