--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="default_margin_content">16dp</dimen>
+    <dimen name="default_margin_content_middle">24dp</dimen>
     <dimen name="default_margin_content_small">8dp</dimen>
     <dimen name="default_margin_content_medium">12dp</dimen>
     <dimen name="default_margin_content_big">32dp</dimen>
