--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -60,4 +60,6 @@
     <dimen name="layout_width_attachment_item">320dp</dimen>
     <dimen name="min_height_layout_message_parts">400dp</dimen>
     <dimen name="first_button_padding">48dp</dimen>
+    <dimen name="layout_height_sub_header">48dp</dimen>
+    <dimen name="margin_top_password_layout">48dp</dimen>
 </resources>
