--- a/FlowCrypt/src/main/res/values/styles.xml
+++ b/FlowCrypt/src/main/res/values/styles.xml
@@ -107,4 +107,11 @@
         <item name="android:layout_marginTop">@dimen/margin_top_screen_heading</item>
     </style>
 
+    <style name="AppWidget.TextInputLayout">
+        <item name="android:paddingBottom">@dimen/default_margin_small</item>
+        <item name="android:paddingTop">@dimen/default_margin_small</item>
+        <item name="android:paddingEnd">@dimen/default_twice_dip</item>
+        <item name="android:paddingStart">@dimen/default_twice_dip</item>
+        <item name="android:background">@drawable/bg_bottom_line_gray</item>
+    </style>
 </resources>
