--- a/FlowCrypt/src/main/res/drawable/bg_bottom_line_gray.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_bottom_line_gray.xml
@@ -6,13 +6,18 @@
   ~ Contributors: DenBond7
   -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingBottom="@dimen/default_margin_small"
-    android:paddingTop="@dimen/default_margin_small">
-    <item android:gravity="bottom">
-        <shape>
-            <size android:height="@dimen/default_single_dip" />
-            <solid android:color="@color/gray" />
-        </shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <inset
+            android:insetBottom="0dp"
+            android:insetLeft="@dimen/default_twice_dip_inverse"
+            android:insetRight="@dimen/default_twice_dip_inverse"
+            android:insetTop="@dimen/default_twice_dip_inverse">
+            <shape>
+                <stroke
+                    android:width="@dimen/default_single_dip"
+                    android:color="@color/gray" />
+            </shape>
+        </inset>
     </item>
 </layer-list>
