--- a/FlowCrypt/src/main/res/layout/content_add_new_account_manually.xml
+++ b/FlowCrypt/src/main/res/layout/content_add_new_account_manually.xml
@@ -28,9 +28,9 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutEmail"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewAccountInfo">
@@ -49,10 +49,10 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutUsername"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutEmail">
@@ -71,10 +71,10 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutPassword"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutUsername"
@@ -107,9 +107,9 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutImapServer"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewIncomingEmailSettings">
@@ -128,10 +128,10 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutImapPort"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutImapServer">
@@ -181,9 +181,9 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutSmtpServer"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewOutgoingEmailSettings">
@@ -202,10 +202,10 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutSmtpPort"
+            style="@style/AppWidget.TextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
-            android:background="@drawable/bg_bottom_line_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layoutSmtpServer">
@@ -265,10 +265,10 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layoutSmtpUserName"
+                style="@style/AppWidget.TextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_content_small"
-                android:background="@drawable/bg_bottom_line_gray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -287,10 +287,10 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layoutSmtpPassword"
+                style="@style/AppWidget.TextInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_content_small"
-                android:background="@drawable/bg_bottom_line_gray"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/layoutSmtpUserName"
