--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="default_margin_content_big">32dp</dimen>
     <dimen name="default_single_dip">1dp</dimen>
     <dimen name="default_twice_dip">2dp</dimen>
+    <dimen name="default_twice_dip_inverse">-2dp</dimen>
 
     <dimen name="default_button_height">64dp</dimen>
     <dimen name="default_button_width">320dp</dimen>
