--- a/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_other.xml
@@ -4,20 +4,16 @@
   ~ Contributors: DenBond7
   -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingBottom="2dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="2dp"
-    android:paddingTop="2dp">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:gravity="left">
+    <item>
         <shape>
             <solid android:color="@android:color/white" />
         </shape>
     </item>
 
-    <item android:gravity="left">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+    <item>
+        <shape
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
@@ -25,11 +21,18 @@
         </shape>
     </item>
 
-    <item android:gravity="left">
-        <shape>
-            <size android:width="8dp" />
-            <solid android:color="@color/gray" />
-        </shape>
+    <item>
+        <inset
+            android:insetBottom="@dimen/width_pgp_message_type_line_inverse"
+            android:insetLeft="0dp"
+            android:insetRight="@dimen/width_pgp_message_type_line_inverse"
+            android:insetTop="@dimen/width_pgp_message_type_line_inverse">
+            <shape>
+                <stroke
+                    android:width="@dimen/width_pgp_message_type_line"
+                    android:color="@color/gray" />
+            </shape>
+        </inset>
     </item>
 
 </layer-list>
