--- a/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message_error.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_message_part_pgp_message_error.xml
@@ -4,32 +4,33 @@
   ~ Contributors: DenBond7
   -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingBottom="2dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="2dp"
-    android:paddingTop="2dp">
-
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
             android:src="@drawable/lock_seamless_bg"
             android:tileMode="repeat" />
     </item>
 
-    <item android:gravity="left">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+    <item>
+        <shape android:shape="rectangle">
             <stroke
-                android:width="1dp"
+                android:width="@dimen/default_single_dip"
                 android:color="@color/light" />
         </shape>
     </item>
 
-    <item android:gravity="left">
-        <shape>
-            <size android:width="8dp" />
-            <solid android:color="@color/red" />
-        </shape>
+    <item>
+        <inset
+            android:insetBottom="@dimen/width_pgp_message_type_line_inverse"
+            android:insetLeft="0dp"
+            android:insetRight="@dimen/width_pgp_message_type_line_inverse"
+            android:insetTop="@dimen/width_pgp_message_type_line_inverse">
+            <shape>
+                <stroke
+                    android:width="@dimen/width_pgp_message_type_line"
+                    android:color="@color/red" />
+            </shape>
+        </inset>
     </item>
 
 </layer-list>
