--- a/FlowCrypt/src/main/res/layout/content_add_new_account_manually.xml
+++ b/FlowCrypt/src/main/res/layout/content_add_new_account_manually.xml
@@ -28,7 +28,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutEmail"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -49,7 +49,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutUsername"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
@@ -71,7 +71,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutPassword"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
@@ -107,7 +107,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutImapServer"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -128,7 +128,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutImapPort"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
@@ -181,7 +181,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutSmtpServer"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -202,7 +202,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/layoutSmtpPort"
-            style="@style/AppWidget.TextInputLayout"
+            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin_content_small"
@@ -265,7 +265,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layoutSmtpUserName"
-                style="@style/AppWidget.TextInputLayout"
+                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_content_small"
@@ -287,7 +287,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layoutSmtpPassword"
-                style="@style/AppWidget.TextInputLayout"
+                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_content_small"
