--- a/FlowCrypt/src/main/res/layout/message_part_pgp_message.xml
+++ b/FlowCrypt/src/main/res/layout/message_part_pgp_message.xml
@@ -7,11 +7,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/textViewMessagePartPgpMessage"
+    style="@style/AppWidget.TextInputLayout.PgpBlock.Message"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/default_margin_medium"
     android:autoLink="web"
-    android:background="@drawable/bg_message_part_pgp_message"
     android:textColor="@android:color/black"
     android:textIsSelectable="true"
     android:textSize="@dimen/default_text_size_medium"
