--- a/FlowCrypt/src/main/res/layout/nav_header_email_manager.xml
+++ b/FlowCrypt/src/main/res/layout/nav_header_email_manager.xml
@@ -49,10 +49,12 @@
 
         <LinearLayout
             android:id="@+id/layoutUserInfo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageViewExpandAccountManagement"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -67,6 +69,8 @@
                 android:id="@+id/textViewUserEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="middle"
+                android:singleLine="true"
                 tools:text="android.studio@android.com" />
         </LinearLayout>
 
