--- a/FlowCrypt/src/main/res/xml/dev_preferences.xml
+++ b/FlowCrypt/src/main/res/xml/dev_preferences.xml
@@ -20,8 +20,8 @@
             android:key="@string/preferences_key_is_acra_enable"
             android:title="@string/preferences_title_enable_acra" />
         <CheckBoxPreference
-            android:defaultValue="false"
-            android:key="@string/preferences_key_is_java_mail_debug_enable"
+            android:defaultValue="@string/gradle_is_mail_debug_enable"
+            android:key="@string/preferences_key_is_mail_debug_enable"
             android:title="@string/preferences_title_enable_mail_debug" />
         <Preference android:title="@string/crash_the_app">
             <intent
