--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -33,6 +33,8 @@
     <item name="syns_load_private_keys" type="id" />
     <item name="syns_send_backup_with_private_key_to_key_owner" type="id" />
 
+    <item name="js_decrypt_message" type="id" />
+
     <item name="viewIdProgressView" type="id" />
     <item name="viewIdStatusView" type="id" />
     <item name="viewIdTextViewStatusInfo" type="id" />
