--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -34,6 +34,7 @@
     <item name="syns_send_backup_with_private_key_to_key_owner" type="id" />
 
     <item name="js_decrypt_message" type="id" />
+    <item name="js_refresh_storage_connector" type="id" />
 
     <item name="viewIdProgressView" type="id" />
     <item name="viewIdStatusView" type="id" />
