--- a/FlowCrypt/src/main/res/layout/activity_check_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_check_keys.xml
@@ -28,12 +28,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_found_backup"
             android:gravity="center"
-            android:text="@string/found_backup_of_your_account_key"
             android:textColor="@android:color/black"
             android:textSize="@dimen/default_text_size_medium"
             app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
             app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-            app:layout_constraintTop_toBottomOf="@+id/textViewSetupFlowCrypt" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewSetupFlowCrypt"
+            tools:text="Found a backup of your account key" />
 
         <ProgressBar
             android:id="@+id/progressBar"
