--- a/FlowCrypt/src/main/res/layout/activity_import_private_key.xml
+++ b/FlowCrypt/src/main/res/layout/activity_import_private_key.xml
@@ -60,12 +60,12 @@
                 style="@style/AppWidget.Button"
                 android:layout_width="0dp"
                 android:layout_marginTop="@dimen/margin_top_first_button"
-                android:text="@string/import_backup"
                 android:theme="@style/AppWidget.Button.Green"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="@+id/guidelineLeft"
                 app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
-                app:layout_constraintTop_toBottomOf="@+id/textViewImportKeyTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewImportKeyTitle"
+                tools:text="Import keys" />
 
             <Button
                 android:id="@+id/buttonLoadFromFile"
