--- a/FlowCrypt/src/main/res/layout/activity_create_private_key.xml
+++ b/FlowCrypt/src/main/res/layout/activity_create_private_key.xml
@@ -94,7 +94,7 @@
                         android:background="?selectableItemBackgroundBorderless"
                         android:contentDescription="@string/see_choosing_secure_pass_phrases"
                         android:padding="@dimen/default_margin_content_small"
-                        app:srcCompat="@drawable/ic_help" />
+                        app:srcCompat="@mipmap/ic_help_grey" />
 
                 </LinearLayout>
 
